--- a/Generating Sound Wave.ipynb
+++ b/Generating Sound Wave.ipynb
@@ -9,8 +9,7 @@
     "import pyaudio\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplo\n",
-    "t as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "from time import *\n",
     "\n",
     "%matplotlib inline"
@@ -283,26 +282,10 @@
     "                                       np.linspace(maxVolume, minVolume, samples)])\n",
     "song.loc[:,'Note'] = 'C4'\n",
     "song.loc[:,'Duration'] = 0.5572565\n",
-    "song = song[['Note', 'Duration', 'Volume']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "song = song.values.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
+    "song = song[['Note', 'Duration', 'Volume']]\n",
+    "\n",
+    "song = song.values.tolist()\n",
+    "\n",
     "fs = 44100  # sampling rate, Hz, must be integer\n",
     "volume = 0.3\n",
     "\n",
