--- a/notebooks/Gerando Efeitos Digitais de Áudio.ipynb
+++ b/notebooks/Gerando Efeitos Digitais de Áudio.ipynb
@@ -611,7 +611,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -625,11 +625,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "7467e97bccb13739aa1ff3d5d1b1de67d499ba541a497e2c6f27473d83c43c5a"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
